test/Fail/customised/Issue2649-2.agda
module Issue2649-2 where

open import Issue2649-1

open module M (A : Set) (a : A) = MyModule A a public
